allows disco to be deployed multiple times

--- a/system/disco/templates/clusterrole.yaml
+++ b/system/disco/templates/clusterrole.yaml
@@ -4,7 +4,7 @@ kind: ClusterRole
 metadata:
   labels:
     app: {{ template "name" . }}
-  name: {{ template "name" . }}
+  name: "{{ .Release.Name }}:{{ template "name" . }}"
 rules:
   - apiGroups:
       - extensions
