--- a/system/disco/templates/rolebinding.yaml
+++ b/system/disco/templates/rolebinding.yaml
@@ -12,5 +12,5 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: {{ required ".Values.rbac.serviceAccountName missing" .Values.rbac.serviceAccountName }}
-    namespace: kube-system
+    namespace: {{ .Release.Namespace }}
 {{- end -}}
