--- a/system/disco/templates/clusterrolebinding.yaml
+++ b/system/disco/templates/clusterrolebinding.yaml
@@ -4,11 +4,11 @@ kind: ClusterRoleBinding
 metadata:
   labels:
     app: {{ template "name" . }}
-  name: "{{ .Release.Name }}:{{ template "name" . }}"
+  name: "{{ .Release.Namespace }}:{{ template "name" . }}"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: "{{ .Release.Name }}:{{ template "name" . }}"
+  name: "{{ .Release.Namespace }}:{{ template "name" . }}"
 subjects:
   - kind: ServiceAccount
     name: {{ required ".Values.rbac.serviceAccountName missing" .Values.rbac.serviceAccountName }}
