remove old prometheus; enable federation with thanos

--- a/openstack/maia/templates/etc/_maia.conf
+++ b/openstack/maia/templates/etc/_maia.conf
@@ -1,10 +1,7 @@
 {{- if .Values.maia.enabled }}
 [maia]
-{{- if .Values.prometheus.enabled }}
-prometheus_url = "http://prometheus-maia:{{.Values.prometheus.listen_port}}"
-{{- else }}
-prometheus_url = "http://{{.Values.maia.prometheus_url}}:{{.Values.prometheus.listen_port}}"
-{{- end }}
+prometheus_url = "http://prometheus-maia-oprom-thanos-query:9090"
+federate_url = "http://prometheus-maia-oprom:9090"
 bind_address = "0.0.0.0:{{.Values.maia.listen_port}}"
 #proxy = "http://localhost:8889"
 # do not list label values from series older than label_value_ttl
