--- a/openstack/maia/templates/maia-ingress.yaml
+++ b/openstack/maia/templates/maia-ingress.yaml
@@ -24,5 +24,5 @@ spec:
             servicePort: {{.Values.maia.listen_port}}
 # uncomment to expose Prometheus UI instead of Maia
 #            serviceName: prometheus-maia
-#            servicePort: {{.Values.prometheus.listen_port}}
+#            servicePort: 9090 
 {{- end }}
