--- a/prometheus-exporters/jumpserver-exporter/templates/jumpserver-deployment.yaml
+++ b/prometheus-exporters/jumpserver-exporter/templates/jumpserver-deployment.yaml
@@ -16,7 +16,7 @@ spec:
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: {{ .Values.jumpserver.port_number | quote }}
-        prometheus.io/targets: {{ required ".Values.alerts.prometheus missing" .Values.alerts.prometheus | quote }}
+        prometheus.io/targets: {{ required ".Values.jumpserver.alerts.prometheus missing" .Values.jumpserver.alerts.prometheus | quote }}
     spec:
       containers:
          - name: jumpserver-exporter
