--- a/prometheus-exporters/jumpserver-exporter/values.yaml
+++ b/prometheus-exporters/jumpserver-exporter/values.yaml
@@ -3,5 +3,8 @@ jumpserver:
       namespace: monsoon
       name: jumphealth
       tag: 1.3
-#   radius_secret: DEFINED-IN-REGION-SECRETS
+   radius_secret: DEFINED-IN-REGION-SECRETS
    port_number: 9150
+   alerts:
+      enabled: true
+      prometheus: infra-frontend
