changed image handling

--- a/prometheus-exporters/jumpserver-exporter/templates/jumpserver-deployment.yaml
+++ b/prometheus-exporters/jumpserver-exporter/templates/jumpserver-deployment.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
          - name: jumpserver-exporter
-           image: {{ required "global.imageRegistry variable missing" .Values.global.imageRegistry }}/{{ .Values.jumpserver.image.namespace }}/{{ .Values.jumpserver.image.name }}:{{ .Values.jumpserver.image.tag }}
+           image: {{ required "global.imageRegistry variable missing" .Values.jumpserver.image.imageRegistry }}/{{ .Values.jumpserver.image.namespace }}/{{ .Values.jumpserver.image.name }}:{{ .Values.jumpserver.image.tag }}
            ports:
              - name: metrics
                containerPort: {{ .Values.jumpserver.port_number }}
