--- a/prometheus-exporters/jumpserver-exporter/values.yaml
+++ b/prometheus-exporters/jumpserver-exporter/values.yaml
@@ -1,6 +1,7 @@
 jumpserver:
    image:
-      namespace: monsoon
+      imageRegistry: DEFINED-IN-REGION-SECRETS
+      namespace: DEFINED-IN-REGION-SECRETS
       name: jumphealth
       tag: 1.3
    radius_secret: DEFINED-IN-REGION-SECRETS
