--- a/prometheus-exporters/jumpserver-exporter/templates/jumpserver-deployment.yaml
+++ b/prometheus-exporters/jumpserver-exporter/templates/jumpserver-deployment.yaml
@@ -20,13 +20,13 @@ spec:
     spec:
       containers:
          - name: jumpserver-exporter
-           image: {{ required "global.imageRegistry variable missing" .Values.jumpserver.image.imageRegistry }}/{{ .Values.jumpserver.image.namespace }}/{{ .Values.jumpserver.image.name }}:{{ .Values.jumpserver.image.tag }}
+           image: {{ required ".Values.jumpserver.image.imageRegistry variable missing" .Values.jumpserver.image.imageRegistry }}/{{ .Values.jumpserver.image.namespace }}/{{ .Values.jumpserver.image.name }}:{{ .Values.jumpserver.image.tag }}
            ports:
              - name: metrics
                containerPort: {{ .Values.jumpserver.port_number }}
            env:
            - name: REGION
-             value: {{ .Values.global.region }}
+             value: {{ .Values.jumpserver.region }}
            - name: RADIUS_SECRET
              value: {{ required "jumpserver.radius_secret variable is missing" .Values.jumpserver.radius_secret }}
            - name: EXPORT_PORT
