--- a/prometheus-exporters/jumpserver-exporter/templates/service.yaml
+++ b/prometheus-exporters/jumpserver-exporter/templates/service.yaml
@@ -12,4 +12,4 @@ spec:
     app: jumpserver-exporter
   ports:
     - name: metrics
-      port: {{ .Values.jumpserver.port_number | quote }}
+      port: {{ .Values.jumpserver.port_number }}
