scaling down jump exporters

--- a/openstack/maia/templates/jumpserver-deployment.yaml
+++ b/openstack/maia/templates/jumpserver-deployment.yaml
@@ -4,6 +4,7 @@ metadata:
   name: jumpserver-exporter 
   namespace: maia 
 spec:
+  replicas: 0
   selector:
     matchLabels:
       app: jumpserver-exporter 
