True --> true in helm

--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -6,7 +6,7 @@ global:
 
 maia:
   # maia is on in all regions by default
-  enabled: True
+  enabled: true
   # vice_president is used by default to generate certs
   vice_president: true
   # endpoint_host_public: DEFINED-IN-REGION-SECRETS
@@ -40,7 +40,7 @@ maia:
 
 # this is the new reused prometheus
 prometheus_server:
-  enabled: True
+  enabled: true
   image:
     repository: prom/prometheus
     tag: v2.8.0
