[cinder] updated stuck metric

--- a/openstack/cinder/values.yaml
+++ b/openstack/cinder/values.yaml
@@ -113,7 +113,7 @@ mysql_metrics:
           MAX(NOW() - updated_at) AS max_duration_gauge
         FROM volumes
         WHERE
-          status IN ('attaching', 'deleting', 'detaching')
+          status IN ('attaching', 'deleting', 'detaching') AND (updated_at < DATE_SUB(now(), INTERVAL 15 MINUTE))
         GROUP BY
           cinder_host,
           availability_zone,
