adding optional enabling

--- a/prometheus-exporters/jumpserver-exporter/values.yaml
+++ b/prometheus-exporters/jumpserver-exporter/values.yaml
@@ -1,4 +1,5 @@
 jumpserver:
+   enabled: false
    image:
       imageRegistry: DEFINED-IN-REGION-SECRETS
       namespace: DEFINED-IN-REGION-SECRETS
