--- a/prometheus-exporters/jumpserver-exporter/templates/alerts.yaml
+++ b/prometheus-exporters/jumpserver-exporter/templates/alerts.yaml
@@ -1,5 +1,3 @@
-{{- define "prometheus.alerts" }}
-{{/* Generate Prometheus Alert Rules */}}
 {{- $values := .Values.jumperver.alerts }}
 {{- if $values.enabled }}
 {{- range $path, $bytes := .Files.Glob "alerts/*.alerts" }}
@@ -8,9 +6,9 @@ apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 
 metadata:
-  name: {{ printf "%s" $path | replace "/" "-" }}
+  name: {{ printf "jumpserver-exporter-%s" $path | replace "/" "-" }}
   labels:
-    type: alerting-rules
+    app: jumpserver-exporter
     prometheus: {{ required "$values.prometheus missing" $values.prometheus }}
 
 spec:
@@ -18,4 +16,3 @@ spec:
 
 {{- end }}
 {{- end }}
-{{ end -}}
