--- a/prometheus-exporters/jumpserver-exporter/templates/alerts.yaml
+++ b/prometheus-exporters/jumpserver-exporter/templates/alerts.yaml
@@ -1,4 +1,4 @@
-{{- $values := .Values.jumperver.alerts }}
+{{- $values := .Values.jumpserver.alerts }}
 {{- if $values.enabled }}
 {{- range $path, $bytes := .Files.Glob "alerts/*.alerts" }}
 ---
