--- a/system/disco/values.yaml
+++ b/system/disco/values.yaml
@@ -1,6 +1,6 @@
 image:
   repository: sapcc/disco
-  tag: v201907101600
+  tag: v201910111743
 
 rbac:
   create: false
@@ -14,6 +14,18 @@ recordsetTTL: 1800
 
 # Only an ingress with this annotation will be considered.
 ingressAnnotation: "disco"
+
+# RecheckPeriod defines the base period after which configmaps are checked again.
+recheckPeriod: 5m
+
+# ResyncPeriod defines the base period after which the cache is resynced.
+resyncPeriod: 2m
+
+# The operator threadiness.
+threadiness: 1
+
+# Install the custom resource definitions (CRDs) if not present.
+installCRD: true
 
 # Enable the OpenStack seed for the service user described in the openstack section below.
 seed:
