--- a/system/disco/templates/clusterrole.yaml
+++ b/system/disco/templates/clusterrole.yaml
@@ -7,9 +7,23 @@ metadata:
   name: "{{ .Release.Namespace }}:{{ template "name" . }}"
 rules:
   - apiGroups:
+      - apiextensions.k8s.io
+    resources:
+      - customresourcedefinitions
+    verbs:
+      - '*'
+  - apiGroups:
+      - disco.stable.sap.cc
+    resources:
+      - records
+      - records/finalizers
+    verbs:
+      - '*'
+  - apiGroups:
       - extensions
     resources:
       - ingresses
+      - ingresses/finalizers
     verbs:
       - get
       - list
@@ -22,4 +36,12 @@ rules:
     verbs:
       - create
       - patch
+  - apiGroups:
+      - ""
+    resources:
+      - namespaces
+    verbs:
+      - get
+      - list
+      - watch
 {{- end }}
