only deploy record if values present

--- a/system/kube-system-kubernikus/templates/record-ingress-virtual.yaml
+++ b/system/kube-system-kubernikus/templates/record-ingress-virtual.yaml
@@ -1,4 +1,5 @@
-{{- if and .Values.externalIPs .Values.externalIPs.ingress }}
+{{- if .Values.externalIPs }}
+{{- if .Values.externalIPs.ingress }}
 apiVersion: disco.stable.sap.cc/v1
 kind: Record
 
@@ -10,4 +11,5 @@ spec:
   record: {{ required ".Values.externalIPs.ingress missing" .Values.externalIPs.ingress }}
   hosts:
     - ingress.kubernikus.{{- required ".Values.global.region missing" .Values.global.region -}}.{{- required ".Values.global.domain missing" .Values.global.domain }}
+{{ end }}
 {{ end }}
